{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 80,
  "lineage": "c1b91924-50f1-4181-90d0-d1c39e2e2606",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_nat_rule_collection",
      "name": "myFirewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Dnat",
            "azure_firewall_name": "myFirewall",
            "id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/azureFirewalls/myFirewall/natRuleCollections/myNATCollection",
            "name": "myNATCollection",
            "priority": 100,
            "resource_group_name": "myResourceGroup",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "20.237.197.246"
                ],
                "destination_ports": [
                  "443"
                ],
                "name": "myRule",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": [],
                "translated_address": "10.0.1.4",
                "translated_port": "443"
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_container_group.ssl-frontend",
            "azurerm_firewall.myFirewall",
            "azurerm_public_ip.myFWPublicIPAddress",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myBackendNSG",
            "location": "westus",
            "name": "myBackendNSG",
            "resource_group_name": "myResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "denyall",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myFWPublicIPAddress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/fw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.237.197.246",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "fw-pip",
            "resource_group_name": "myResourceGroup",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/routeTables/rt-table",
            "location": "westus",
            "name": "rt-table",
            "resource_group_name": "myResourceGroup",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route1",
                "next_hop_in_ip_address": "10.0.3.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySSLsubnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.myFirewall",
            "azurerm_public_ip.myFWPublicIPAddress",
            "azurerm_resource_group.rg",
            "azurerm_subnet.firewall",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "delegation": [
              {
                "name": "snet-delegation-back",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.ContainerInstance/containerGroups"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/myACIsubnet",
            "name": "myACIsubnet",
            "resource_group_name": "myResourceGroup",
            "virtual_network_name": "myVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "myResourceGroup",
            "virtual_network_name": "myVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "delegation": [
              {
                "name": "snet-delegation-front",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.ContainerInstance/containerGroups"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySSLsubnet",
            "name": "mySSLsubnet",
            "resource_group_name": "myResourceGroup",
            "virtual_network_name": "myVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "myterraformnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/myACIsubnet",
            "network_security_group_id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myBackendNSG",
            "subnet_id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/myACIsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-backend",
            "azurerm_resource_group.rg",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "myFirewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySSLsubnet",
            "route_table_id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/routeTables/rt-table",
            "subnet_id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySSLsubnet"
          },
          "dependencies": [
            "azurerm_firewall.myFirewall",
            "azurerm_public_ip.myFWPublicIPAddress",
            "azurerm_resource_group.rg",
            "azurerm_route_table.rt-table",
            "azurerm_subnet.firewall",
            "azurerm_subnet.gateway",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myterraformnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "243c6594-5adb-447f-9026-4833f4034e14",
            "id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVNet",
            "location": "westus",
            "name": "myVNet",
            "resource_group_name": "myResourceGroup",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySSLsubnet",
                "name": "mySSLsubnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/myACIsubnet",
                "name": "myACIsubnet",
                "security_group": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myBackendNSG"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/34c36943-27ec-47b8-b66c-f2cfe78dd467/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}